# marathon-tranning-codes

./: CMakeLists.txt  README.md
Programming Challenges/: The_Trip.cpp
Programming Challenges - (book)/: Graphical Editor.cpp  LCD_Display.cpp  Minewepper.cpp  The 3n + 1 Probelm.cpp  a.out  diff.cpp  diff.out  diff.txt
Ruan's execises/AD HOC e Alg. Gulosos/: AdivinhandoEstruturaDados.cpp  ApagandoEGanhando.cpp  ApagandoEGanhando1.cpp  ApagandoeGanhando3.cpp  EmBraille.cpp
Ruan's execises/Estrutura de Dados/: FrequenciaDeLetrasInC.c  FrequenciaDeLetrasfixing1.cpp  IdaFeira.cpp  JogandoCartasFora.cpp
Ruan's execises/Grafos/: MapaDoMeistre.cpp
RuanContest/AD HOC e Alg. Gulosos/: ApagandoeGanhando2.cpp  Dentista.cpp  EscalaMusical.cpp  SapoDinaminco2.cpp
RuanContest/ADHOCeAlg.Gulosos/: ApagandoEGanhando.cpp  EmBraille.cpp  NotasMusicais.cpp  SapoDinamico.cpp  SapoDinamico1.cpp  Tapetes.cpp  TrianguloTrinomial.cpp  apagandoeganhando_antigo.cpp
RuanContest/Estrutura de Dados/: FrequenciaDeLetras1.cpp
RuanContest/EstruturadeDados/: BalancoDeParentesis.cpp  Camisetas.cpp  EuPossoAdivinharAEstruturaDeDados.cpp  FrequenciaDeLetras.cpp  IdaFeira.cpp  ListaTelefonicaEconomica.cpp  SpursRocks.cpp  WoodSpecies.cpp
RuanContest/Grafos/: Costa.cpp  MapaDoMeistre.cpp  PrefixaInfixaPosfixa.cpp  PrefixaInfixaPosfixa_Output.txt
RuanContest/segunda olimpiada do IFPB/: ArvoreDeNatal.cpp  output.txt
TestingBasicCodes/: TestingFunctionParameter.c  Testing_qsort.cpp  Testing_stoi.cpp  testing_matrix_parameter_pass_by_reference.cpp
randomTasks/: LuzesDeNatal.cpp
testing/: a.out  linkedListString.cpp  mapObjects.cpp  testingStringByReference.cpp
