cmake_minimum_required(VERSION 3.14)
project(MarathonTranningCodes)

set(CMAKE_CXX_STANDARD 17)

add_executable(MarathonTranningCodes main.cpp)
add_executable(MapaDoMeistre RuanContest/Grafos/MapaDoMeistre.cpp)
add_executable(Costa RuanContest/Grafos/Costa.cpp)
add_executable(BalancoDeParentesis RuanContest/EstruturadeDados/BalancoDeParentesis.cpp)
add_executable(EmBraille RuanContest/ADHOCeAlg.Gulosos/EmBraille.cpp)
add_executable(LuzesDeNatal randomTasks/LuzesDeNatal.cpp)
add_executable(FrequenciaDeLetras RuanContest/EstruturadeDados/FrequenciaDeLetras.cpp)
add_executable(Camisetas RuanContest/EstruturadeDados/Camisetas.cpp)
add_executable(IdaFeira RuanContest/EstruturadeDados/IdaFeira.cpp)
add_executable(EuPossoAdivinharAEstruturaDeDados RuanContest/EstruturadeDados/EuPossoAdivinharAEstruturaDeDados.cpp)
add_executable(ListaTelefonicaEconomica RuanContest/EstruturadeDados/ListaTelefonicaEconomica.cpp)
add_executable(WoodSpecies RuanContest/EstruturadeDados/WoodSpecies.cpp)
add_executable(Testing_qsort TestingBasicCodes/Testing_qsort.cpp)